apps/miniflux/app/route.yaml
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: miniflux-route
  namespace: miniflux
spec:
  entryPoints:
    - web
  routes:
  - match: Host(`miniflux.trivernis.dev`, `miniflux.trivernis.net`)
    kind: Rule
    middlewares:
      - name: strict-security-headers
        namespace: default
    services:
    - name: miniflux
      port: http
